1.10.10 Feature: Use `dolphin --select $1` when run under KDE